--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
     "files.associations": {
-        "time.h": "c"
+        "time.h": "c",
+        "limits": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
     //"terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\powershell.exe"
